Fixed Whitespace Issue.

--- a/ThePodcastReview.Web/Content/Site.css
+++ b/ThePodcastReview.Web/Content/Site.css
@@ -33,9 +33,12 @@ textarea {
 }
 
 .panel-body {
-    white-space: pre-line;
     box-shadow: 3px 3px 1px 1px rgba(159, 159, 160, .2);
 }
+
+ #fav-ep {
+        white-space: pre-line;
+    }
 
 .panel-heading {
     box-shadow: 3px 0px 1px 1px rgba(159, 159, 160, .2);
